--- a/LandmineFlyWeb/webPart/index.html
+++ b/LandmineFlyWeb/webPart/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script type="module" src="/src/main.js"></script>
 		<link rel="icon" href="/favicon.ico" />
-		<title>LandmineFly</title>
+		<title>LandmineFly | 云履循光</title>
 	</head>
 	<body>
 		<div id="app"></div>
