--- a/LandmineFlyWeb/webPart/index.html
+++ b/LandmineFlyWeb/webPart/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script type="module" src="/src/main.js"></script>
+		<script src="./src/assets/icons/iconfont.js"></script>
 		<link rel="icon" href="/favicon.ico" />
 		<title>LandmineFly | 云履循光</title>
 	</head>
